update: external variables on actions

--- a/add-label-to-issue/action.yml
+++ b/add-label-to-issue/action.yml
@@ -6,13 +6,13 @@ inputs:
   token:
     description: 'The token'
     required: true
-  issue-id:
+  issue_id:
     description: 'The issue id'
     required: true
-  organization-name:
+  organization_name:
     description: 'The organization name'
     required: true
-  repository-name:
+  repository_name:
     description: 'The repository name'
     required: true
   label:
