--- a/.github/workflows/rebase.yml
+++ b/.github/workflows/rebase.yml
@@ -14,7 +14,7 @@ jobs:
       with:
         fetch-depth: 0
     - name: Automatic Rebase
-      uses: paretogroup/github-actions/label-rebase@rebase
+      uses: paretogroup/github-actions/label-rebase@master
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   # https://github.community/t5/GitHub-Actions/Workflow-is-failing-if-no-job-can-be-ran-due-to-condition/m-p/38186#M3250
